<resources>
  <string name="app_name">MultiWii EZ-GUI</string>
  <string name="scanning">scanning for devices...</string>
  <string name="select_device">Select a device to connect</string>
  <string name="none_paired">No devices have been paired</string>
  <string name="none_found">No devices found</string>
  <string name="title_paired_devices">Paired Devices</string>
  <string name="title_other_devices">Other Available Devices</string>
  <string name="button_scan">Scan for devices</string>
  <string name="Radio">Radio</string>
  <string name="PitchRoll">Dashboard 1</string>
  <string name="Pitch">Pitch</string>
  <string name="Roll">Roll</string>
  <string name="Mag">Mag</string>
  <string name="Config">Config</string>
  <string name="Logging">Logging</string>
  <string name="RadioMode">Radio Mode</string>
  <string name="Mode1">Mode1</string>
  <string name="Mode2">Mode2</string>
  <string name="SaveSettings">Save Settings</string>
  <string name="ProtocolVersion">Protocol Version</string>
  <string name="Baro">Altitude(m)</string>
  <string name="MagMode">Mag Mode</string>
  <string name="PointNorth">Point North</string>
  <string name="Point_multirotor_front">Point multirotor front</string>
  <string name="PhoneMag">PhoneMag</string>
  <string name="PitchRollCircleView">Pitch Roll Circle View</string>
  <string name="pointFrontHelp">Point multirotor front compares the compass readings from the phone and multicopter. Indicates the copter forward regardless of the location of the phone.</string>
  <string name="TTS">Text to speech</string>
  <string name="GPS">GPS</string>
  <string name="GPS_distanceToHome">Distance to Home(m)</string>
  <string name="GPS_directionToHome">Direction to Home</string>
  <string name="GPS_numSat">NumSat</string>
  <string name="GPS_fix">Fix</string>
  <string name="GPS_update">Update</string>
  <string name="StartLogging">Start Logging</string>
  <string name="Stop_Logging">Stop Logging and Save to File</string>
  <string name="LoggingInfo">Logs are saved here : /sdcard/MultiWiiLogs</string>
  <string name="GPS_altitude">Altitude(m)</string>
  <string name="GPS_speed">Speed(cm/s)</string>
  <string name="GPS_latitude">Latitude</string>
  <string name="GPS_longitude">Longitude</string>
  <string name="menu_exit">Exit</string>
  <string name="menu_connect">MW Connect</string>
  <string name="menu_disconnect">Disconnect</string>
  <string name="SelectBTdevice">Select MultiWii BT</string>
  <string name="MacNotSet">Go to Config and select your bluetooth device first\n\nMay work, may not, may destroy the world or whatever.\nUse at your own risk!\n\n If you like this app buy me a beer (Donate).</string>
  <string name="InfoNotConnected">\n\nMay work, may not, may destroy the world or whatever.\nUse at your own risk.\n If you like this app buy me a beer (Donate).</string>
  <string name="BTDevice">Bluetooth device</string>
  <string name="menu_vote">Rate it or check for updates</string>
  <string name="PhoneLatitude">PhoneLatitude</string>
  <string name="PhoneLongitude">PhoneLongitude</string>
  <string name="PhoneAltitude">PhoneAltitude(m)</string>
  <string name="RestartInfo">If you change protocol, restart app after saving settings.</string>
  <string name="Motors">Motors</string>
  <string name="Servos">Servos</string>
  <string name="AltCorrection">Alt Correction</string>
  <string name="AltCorrectionInfo">Alt set to 0 when arming</string>
  <string name="Yaw">Yaw</string>
  <string name="Alt">Alt</string>
  <string name="Pos">Pos Hold</string>
  <string name="PosR">Pos Hold Rate</string>
  <string name="NavR">Nav Rate</string>
  <string name="PID">PID</string>
  <string name="Read">Read</string>
  <string name="Write">Write</string>
  <string name="Rate">Rate</string>
  <string name="RATE">RATE</string>
  <string name="TPA">Thr PID attenuation</string>
  <string name="Reset">Reset</string>
  <string name="AccCalibration">AccCalibration</string>
  <string name="MagCalibration">MagCalibration</string>
  <string name="Other">Other</string>
  <string name="PhoneSpeed">PhoneSpeed(cm/s)</string>
  <string name="PhoneNumSat">PhoneNumSat</string>
  <string name="dashboard2">Dashboard 2</string>
  <string name="disableBTonExit">Disable BT on exit</string>
  <string name="Declination">Magnetic declination</string>
  <string name="ThrMid">Thr Mid</string>
  <string name="ThrExpo">Thr Expo</string>
  <string name="RCRate">RC Rate</string>
  <string name="RCExpo">RC Expo</string>
  <string name="BattVoltage">Batt Voltage</string>
  <string name="PowerSum">Power Sum</string>
  <string name="PowerMeterAlarm">Power Meter Alarm</string>
  <string name="Level">Level</string>
  <string name="Map">Map</string>
  <string name="Settingssaved">Settings saved</string>
  <string name="isON"> is ON</string>
  <string name="isOFF"> is OFF</string>
  <string name="Bluetoothisnotavailable">Bluetooth is not available</string>
  <string name="Connecting">Connecting...</string>
  <string name="Unabletoconnect">Unable to connect</string>
  <string name="Connected">"Connected!"</string>
  <string name="Disconnected">Disconnected</string>
  <string name="Satellites">Satellites</string>
  <string name="Azimuth">Azimuth</string>
  <string name="gforce">G-Force</string>
  <string name="state">State</string>
  <string name="Battery">Battery(V)</string>
  <string name="PowerSumPowerTrigger">PowerSum/PowerTrigger</string>
  <string name="Donate">Donate</string>
  <string name="Loggingstarted">Logging started</string>
  <string name="Loggingstopedandsaved">Logging stoped and saved</string>
  <string name="ResetALLnotonlyPIDparamstodefault">Reset ALL (not only PID) params to default?</string>
  <string name="Yes">Yes</string>
  <string name="No">No</string>
  <string name="ValuesaresettodefaultPressreadbuttonnow">Values are set to default. Press read button now.</string>
  <string name="Continue">Continue?</string>
  <string name="Done">Done</string>
  <string name="Started">Started</string>
  <string name="About">About</string>
  <string name="BatteryLevelIs">Battery voltage is</string>
  <string name="Reconnecting">Connection lost. Reconnecting</string>
  <string name="Language">Language</string>
  <string name="NotForce">Not Force</string>
  <string name="ForceEnglish">Force English</string>
  <string name="ForceGerman">Force German</string>
  <string name="ForceHungarian">"Force Hungarian "</string>
  <string name="ForcePolish">Force Polish</string>
  <string name="LanguageInfo">Some languages are not supported by default Text To Speech engine.</string>
  <string name="periodicspeaking">Periodic speaking interval (s). 0 for dissable.</string>
  <string name="Control">Copter Control</string>
  <string name="Caution">CAUTION</string>
  <string name="ControlWarning">This function allow to control your multicopter. Everything can go wrong (ie. someone call you). Please remember that BT range is very short. \nMUST BE USED WITH EXTREME CAUTION!\n#define RCSERIAL must be uncommented.\n#define FAILSAFE must be commendted\n Type \"multiwii\" to confirm.</string>
  <string name="OK">OK</string>
  <string name="Cancel">Cancel</string>
  <string name="VoltageAlarm">Start beeping when voltage is below:</string>
  <string name="AdvancedWarning">This section contains dangerous and not very well tested features. Use it only when you know what you are doing. \nMUST BE USED WITH EXTREME CAUTION!\n\n!USE AT YOUR OWN RISK!</string>
  <string name="Advanced">Advanced</string>
  <string name="PhoneAccuracy">PhoneAccuracy(cm)</string>
  <string name="SetCheckboxes">AUX</string>
  <string name="Set">Set</string>
  <string name="SavetoEEPROM">Save to EEPROM</string>
  <string name="Graphs">Graphs</string>
  <string name="show">Show</string>
  <string name="ACCROLL">ACC ROLL</string>
  <string name="ACCPITCH">ACC PITCH</string>
  <string name="ACCZ">ACC Z</string>
  <string name="GYROROLL">GYRO ROLL</string>
  <string name="GYROPITCH">GYRO PITCH</string>
  <string name="GYROYAW">GYRO YAW</string>
  <string name="MAGROLL">MAG ROLL</string>
  <string name="MAGPITCH">MAG PITCH</string>
  <string name="MAGYAW">MAG YAW</string>
  <string name="ALT">ALT</string>
  <string name="HEAD">HEAD</string>
  <string name="Pause">Pause</string>
  <string name="SelectBTdeviceFrsky">Select Frsky BT</string>
  <string name="Frsky">Frsky</string>
  <string name="TxRSSI">TxRSSI</string>
  <string name="RxRSSI">RxRSSI</string>
  <string name="Connect_frsky">Frsky Connect</string>
  <string name="UseOfflineMap">Use Offline Map</string>
  <string name="RefreshRate">Refresh Rate in ms (should be &gt;=100)</string>
  <string name="ConnectionBug">Use when it disconnects when button is pressed (right now only works for dashboard2)</string>
  <string name="CopyFrskyToMW">Use data from Frsky everywhere</string>
  <string name="page1">Dashboard</string>
  <string name="page2">MW Settings</string>
  <string name="page3">Config</string>
  <string name="RawData">Raw Data</string>
  <string name="ShareIt">Share Your Config</string>
  <string name="SelectSetting">Select Setting</string>
  <string name="RXBIND">RX BIND</string>
  <string name="FollowMe">Follow Me (not tested!  must be used with #define USE_MSP_WP) blinks when phone position is send to MW</string>
  <string name="InfoDonate">Do you find this application useful? Support its development by flattering it or sending donations to the developer!</string>
  <string name="convertToKML">Convert to KML (Google Earth)</string>
  <string name="infoDonate">I have spent and will spend many, many hours of my free time to build and extend this program, so if you like and use MultiWii EZ-GUI, please consider donating. This will keep me interested in extending the program.</string>
  <string name="Debug">Debug</string>
  <string name="Later">Not now</string>
  <string name="Warning">Warning</string>
  <string name="SelectedPosition">Selected Position</string>
  <string name="SetAsHome">Set as Home</string>
  <string name="Waypoints">Waypoints</string>
  <string name="LowVoltageAlarm">Low Voltage Alarm</string>
  <string name="RadioModeInfo">This is used only to display correctly radio sticks in Radio view</string>
  <string name="MagModeInfo">Changes behaviour of compass arrow in Dasboard 1</string>
  <string name="CommunityMap">Community Map</string>
  <string name="AddToCommunityMap">Add To Community Map</string>
  <string name="EnterYourNick">Enter your nick</string>
  <string name="EnterDescription">Enter description</string>
  <string name="SetAsPositionHold">Set As Position Hold</string>
  <string name="Follow_Me">FollowMe</string>
  <string name="Follow_Heading">FollowHeading</string>
  <string name="Load">Load</string>
  <string name="Profile">Profile: (compatibile with MultiWiiConf; put the files in to /sdcard/MultiWiiLogs)</string>
  <string name="Save">Save</string>
  <string name="EnterFileName">Enter file name</string>
  <string name="ReverseRollDirection">Reverse roll direction</string>
  <string name="SetAltitude">Set altitude in cm:</string>
  <string name="MapCenterPeriod">Map center period</string>
  <string name="VerticalSpeed">Vertical speed</string>
  <string name="UseFTDISerial">Use Serial Port for MultiWii (please restart the app before you connect)</string>
  <string name="Dashboard3">Dashboard 3</string>
  <string name="SerialPort">Serial Port</string>
  <string name="SerialPortBaudRate">Serial Port baud rate</string>
  <string name="FTDI">FTDI (FT232RL, FT232H, FT2232C/D/HL, FT4232HL FT230X, REX-USB60F/MI(FT232BL))</string>
  <string name="OtherSerialChips">Other (CDC/ACM)</string>
  <string name="ACCcalibrationInfo">Place frame on a level surface, press the AccCalibration button, ensure it is not moving during this period</string>
  <string name="MagCalibrationInfo">Press the MagCalibration button, move multirotor atleast 360 degrees on all axis of rotation. You have 30 seconds to perform this task.</string>
  <string name="TTS_Volts">Volts</string>
</resources>