<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >


    <TextView
        android:id="@+id/TextView01"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/tittle"
        android:gravity="center"
        android:text="@string/Logging"
        android:textColor="@color/tittleText" />






    <Button
        android:id="@+id/buttonStartLogging"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="StartLoggingOnClick"
        android:text="@string/StartLogging" />





    <Button
        android:id="@+id/buttonStopLogging"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="StopLoggingOnClick"
        android:text="@string/Stop_Logging" />


    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/LoggingInfo" />
        
           <Button
        android:id="@+id/button1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="ConvertToKMLOnClick"
        android:text="@string/convertToKML" />
        

</LinearLayout>